# pico-balancer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
dependencies/i2cdevlib/: CMakeLists.txt  I2Cdev.cpp
src/: CMakeLists.txt  FreeRTOSConfig.h  balancer.cpp  lwipopts.h  motors.cpp  motors.hpp  packets.hpp  pico-balancer.cpp  quadrature_encoder.pio  quadrature_encoder_substep.pio  utils.hpp
tools/: Balancer PID Tuning.ipynb  balancer-client.py  gamepad.py  set-pid-constants.py  udp-receiver.py
tools/balancer/: types.py
